--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,10 @@
 @import "node_modules/bulma/bulma";
+
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+    background-color: #fbf3e8;
+}
