--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11404,3 +11404,12 @@ label.panel-block:hover {
   padding: 3rem 1.5rem 6rem;
 }
 
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  background-color: #fbf3e8;
+}
+
