--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,6 @@
 @import "~bulma/sass/utilities/_all";
-$navbar-background-color: #3298c8;
-$navbar-item-hover-background-color:#2E8CB8;
+$navbar-background-color: #BA55D3;
+$navbar-item-hover-background-color:#9400D3;
 $navbar-item-hover-color:rgb(147, 212, 241);
 // @import "node_modules/bulma/bulma";
 @import "~bulma";
