--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,6 +2,7 @@
 $navbar-background-color: #BA55D3;
 $navbar-item-hover-background-color:#9400D3;
 $navbar-item-hover-color:rgb(147, 212, 241);
+$footer-padding: 0;
 // @import "node_modules/bulma/bulma";
 @import "~bulma";
 @import "~buefy/src/scss/buefy";
